samples/_failures_safe/1761325515_2ebaa7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52624dfa.c: In function ‘main’:
./samples/SAFE/__tmp_52624dfa.c:192:5: error: expected expression at end of input
  192 |     if (fgets(input, sizeof(input), stdin) ==
      |     ^~
./samples/SAFE/__tmp_52624dfa.c:192:5: error: expected declaration or statement at end of input
